--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <h1 id='counter'>
     0
   </h1>
-  <button id='-' > ➖ </button>
-  <button id='+' > ➕ </button>
-  <button id='<3' > ❤️ </button>
-  <button id='pause' > pause </button>
+  <button id='-' class='disable'> ➖ </button>
+  <button id='+' class='disable'> ➕ </button>
+  <button id='<3' class='disable'> ❤️ </button>
+  <button id='pause'> pause </button>
 
   <ul class='likes'></ul>
 
@@ -34,7 +34,7 @@
     <form id="comment-form" action="">
       <input type='text' name="" id="" cols="30" rows="10">
       </br>
-      <button id='submit'>submit</button>
+      <button id='submit' class='disable'>submit</button>
     </form>
 
   </div>
